--- a/html/exercicios/listaAninhada.html
+++ b/html/exercicios/listaAninhada.html
@@ -1,7 +1,7 @@
 <h1>Projeto</h1>
 <ul class="tree">
     <li>
-        <span wm-folder>backend</span>
+        <span href="" wm-folder>backend</span>
         <ul>
             <li>
                 <span wm-folder>app</span>
