--- a/css/anatomia.html
+++ b/css/anatomia.html
@@ -5,12 +5,33 @@
     <meta charset="UTF-8">
     <title>Anatomia CSS</title>
     <style>
-        /* ... */
+        .seletor{
+            color: #fff;
+            font-size: 30px;
+            text-align: center;
+            /* múltiplos valores */
+            border: solid 5px navy; /* shorthand property */
+            font-family: Helvetica, sans-serif; /* alternativa */
+            /* funcção */
+            width: calc(100% - 100px);
+            background-color: rgb(34, 154, 189);
+        }
+
+        /* usando uma pseudo-classe */
+        .seletor:hover {
+            background-color: orangered;
+        }
+
+        /* usando um pseudo-elemento */
+        .seletor::first-letter {
+            font-size: 60px;
+            font-weight: bold;
+        }
     </style>
 </head>
 
 <body>
-    <div class="selector">Conteúdo</div>
+    <div class="seletor">Conteúdo</div>
 </body>
 
 </html>
