--- a/css/desafioMenu.html
+++ b/css/desafioMenu.html
@@ -7,7 +7,103 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
-        /* ... */
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Oswald', sans-serif;
+            background-color: lightgray;
+        }
+        
+        .cabecalho {
+            width: 100%;
+            height: 80px;
+            box-sizing: content-box;
+            background-color: #333;
+            border-bottom: solid 5px skyblue;
+        }
+
+        .menu-toggle {
+            float: right;
+            display: none;
+            color: #eee;
+            background-color: #555;
+            border: solid 1px #777;
+            border-radius: 40px;
+            height: 40px;
+            padding: 10px 20px;
+            margin: 20px 15px;
+        }
+
+        .logo {
+            display: inline-block;
+            height: 80px;
+            padding: 15px;
+        }
+
+        .menu {
+            display: inline-block;
+            vertical-align: top;
+            height: 80px;
+            padding: 25px;
+        }
+
+        .menu ul {
+            float: left;
+            display: block; 
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            display: inline-block;
+            padding-right: 5px;
+        }
+
+        .cabecalho a {
+            text-decoration: none;
+            color: #eee;
+            font-size: 1.3em;
+        }
+
+        .menu a {
+            padding: 15px;
+        }
+
+        .logo img {
+            height: 100%;
+        }
+        
+        @media (max-width: 930px) {
+            .menu-toggle { display: block; }
+            .menu { display: none; }
+        }
+
+        .autenticacao {
+            float: right;
+            height: 80px;
+            padding: 25px;
+        }
+
+        .menu a:hover,
+        .menu a.selected {
+            background-color: #4faddb;
+            color: black;
+        }
+
+        .botao {
+            border-radius: 30px;
+            padding: 10px 25px;
+            margin: 10px;
+        }
+
+        .destaque {
+            background-color: #f50a31;
+            color: #fff;
+        }
+
     </style>
 </head>
 
@@ -24,7 +120,7 @@
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="#inicio">Início</a>
+                    <a href="#inicio" class="selected">Início</a>
                 </li>
                 <li>
                     <a href="#cursos">Cursos</a>
@@ -44,7 +140,15 @@
     </header>
 
     <script>
-        // ...
+        window.onhashchange = function(e) {
+            const oldURL = e.oldURL.split('#')[1]
+            const newURL = e.newURL.split('#')[1]
+            console.log(oldURL, newURL)
+            const oldMenu = document.querySelector(`.menu a[href='#${oldURL}']`)
+            const newMenu = document.querySelector(`.menu a[href='#${newURL}']`)
+            oldMenu && oldMenu.classList.remove('selected')
+            newMenu && newMenu.classList.add('selected')
+        }
     </script>
 </body>
 
