--- a/dom/dom/selecionandoElementos4.html
+++ b/dom/dom/selecionandoElementos4.html
@@ -2,28 +2,53 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Selecionar Elementos #04</title>
-    <link rel="stylesheet" href="css/estilo.css">
+  <meta charset="UTF-8">
+  <title>Selecionar Elementos #04</title>
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body class="conteudo exercicio">
-    <div>
-        <p>Início</p>
-    </div>
-    <div>
-        <ul>
-            <li>Pedro</li>
-            <li>Ana</li>
-            <li>Bia</li>
-        </ul>
-    </div>
-    <div>
-        <p>Fim</p>
-    </div>
-    <script>
-        // ...
-    </script>
+  <div>
+    <p>Início</p>
+  </div>
+  <div>
+    <ul>
+      <li>Pedro</li>
+      <li>Ana</li>
+      <li>Bia</li>
+    </ul>
+  </div>
+  <div>
+    <p>Fim</p>
+  </div>
+  <script>
+    function log() {
+      console.log(this);
+    }
+    HTMLCollection.prototype.log = log;
+    HTMLElement.prototype.log = log;
+    NodeList.prototype.log = log;
+    Node.prototype.log = log;
+
+    const list = document.querySelector('div ul');
+    list.parentNode.log();
+    list.childNodes.log();
+
+    const first = list.firstChild;
+    first.log();
+    first.nextSibling.log();
+
+    const last = list.lastChild;
+    last.log();
+    last.previousSibling.log();
+
+    list.children.log();
+    list.firstElementChild.log();
+    list.lastElementChild.log();
+    list.parentNode.nextElementSibling.log();
+
+    document.querySelectorAll('div ul li').log();
+  </script>
 </body>
 
 </html>
