--- a/dom/dom/acessandoAtributos2.html
+++ b/dom/dom/acessandoAtributos2.html
@@ -2,23 +2,49 @@
 <html>
 
 <head>
-    <meta charset='UTF-8'>
-    <title>Acessando Atributos #02</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+  <meta charset='UTF-8'>
+  <title>Acessando Atributos #02</title>
+  <link rel='stylesheet' href='css/estilo.css'>
 </head>
 
 <body class='conteudo exercicio'>
-    <div>
-        <label for="compras">Compras</label>
-        <ul id="compras" destino='escritório' data-urgencia="5">
-            <li>Café</li>
-            <li>Água</li>
-            <li>Copo Descartável</li>
-        </ul>
-    </div>
-    <script>
-        // ...
-    </script>
+  <div>
+    <label for="compras">Compras</label>
+    <ul id="compras" destino='escritório' data-urgencia="5">
+      <li>Café</li>
+      <li>Água</li>
+      <li>Copo Descartável</li>
+    </ul>
+  </div>
+  <script>
+    const list = document.querySelector('div ul[destino="escritório"]');
+    console.log('Elemento "ul".............')
+    console.log('childNodes: ', list.childNodes);
+    console.log('destino: ', list.destino);
+    console.log('getAttribute: ', list.getAttribute('destino'));
+    console.log('hasAttribute: ', list.hasAttribute('destino'));
+
+    list.setAttribute('destino', 'empresa');
+    console.log('getAttribute: ', list.getAttribute('destino'));
+
+    list.setAttribute('status', 'aberto');
+    console.log('getAttribute: ', list.getAttribute('status'));
+
+    list.removeAttribute('destino');
+    console.log('hasAttribute: ', list.hasAttribute('destino'));
+
+    console.log(list.dataset);
+    console.log(list.dataset.urgencia);
+    list.dataset.urgencia = '4'
+    console.log(list.dataset.urgencia);
+    console.log(list.getAttribute('data-urgencia'));
+
+    // cuidado
+    const label = document.querySelector('label');
+    console.log(label.for);
+    console.log(label.htmlFor);
+    console.log(label.getAttribute('for'));
+  </script>
 </body>
 
 </html>
