--- a/ajax/spa/index.html
+++ b/ajax/spa/index.html
@@ -2,29 +2,50 @@
 <html>
 
 <head>
-    <meta charset='UTF-8'>
-    <title>Mini SPA</title>
-    <link rel='stylesheet' href='../css/estilo.css'>
-    <style>
-        nav {
-            font-size: 2em;
-        }
+  <meta charset='UTF-8'>
+  <title>Mini SPA</title>
+  <link rel='stylesheet' href='../css/estilo.css'>
+  <style>
+    nav {
+      font-size: 2em;
+    }
 
-        nav a {
-            text-decoration: none;
-            color: #FFF;
-            padding: 0 10px;
-        }
-    </style>
+    nav a {
+      text-decoration: none;
+      color: #FFF;
+      padding: 0 10px;
+    }
+  </style>
 </head>
 
 <body class="conteudo">
-    <nav>
-        <a href wm-link="series.html" wm-destino=".pagina">Séries</a> |
-        <a href wm-link="linguagens.html" wm-destino=".pagina">Linguagens</a>
-    </nav>
-    <div class="pagina"></div>
-    <script>
-        // ...
-    </script>
+  <nav>
+    <a href wm-link="series.html" wm-destino=".pagina">Séries</a> |
+    <a href wm-link="linguagens.html" wm-destino=".pagina">Linguagens</a>
+  </nav>
+  <div class="pagina"></div>
+  <script>
+    function navigateViaAjax(url, selector, push = true) {
+      if (!url || !selector) return;
+      const element = document.querySelector(selector);
+      fetch(url)
+        .then(resp => resp.text())
+        .then(html => {
+          element.innerHTML = html;
+          if (push) {
+            history.pushState({ selector }, null, url)
+          }
+        })
+    }
+
+    document.querySelectorAll('[wm-link]').forEach(link => {
+      const url = link.attributes['wm-link'].value;
+      const selectorDestiny = link.attributes['wm-destino'].value;
+
+      link.onclick = e => {
+        e.preventDefault();
+        navigateViaAjax(url, selectorDestiny);
+      }
+    })
+  </script>
 </body>
