--- a/ajax/xmlHttpRequest2.html
+++ b/ajax/xmlHttpRequest2.html
@@ -2,26 +2,41 @@
 <html>
 
 <head>
-    <meta charset='UTF-8'>
-    <title>XMLHttpRequest #02</title>
-    <link rel='stylesheet' href='css/estilo.css'>
-    <style>
-        input[type=file] {
-            display: flex;
-            margin: 10px;
-            padding: 40px;
-            font-size: 40px;
-            background: crimson;
-            border-radius: 20px;
-        }
-    </style>
+  <meta charset='UTF-8'>
+  <title>XMLHttpRequest #02</title>
+  <link rel='stylesheet' href='css/estilo.css'>
+  <style>
+    input[type=file] {
+      display: flex;
+      margin: 10px;
+      padding: 40px;
+      font-size: 40px;
+      background: crimson;
+      border-radius: 20px;
+    }
+  </style>
 </head>
 
 <body class="conteudo exercicio">
-    <input type="file" name="arquivo" />
-    <div class="progresso"></div>
+  <input type="file" name="arquivo" />
+  <div class="progresso"></div>
 
-    <script>
-        // ...
-    </script>
+  <script>
+    function ajaxUpload(config) {
+      const xhr = new XMLHttpRequest();
+
+      if (xhr.upload) {
+        xhr.upload.onprogress = e => {
+          const actual = e.loaded;
+          const total = e.total;
+          const percentual = Math.floor(actual / total * 100);
+
+          config.progress({ actual, total, percentual });
+        }
+      }
+
+      xhr.open('post', config.url, true);
+      xhr.send(config.formData);
+    }
+  </script>
 </body>
