[313-330] gulp: building a spa project

--- a/gulp/css/src/index.html
+++ b/gulp/css/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Processando CSS com Gulp</title>
-    <link rel="stylesheet" href="css/estilo.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
