--- a/jquery/entendendoJQuery.html
+++ b/jquery/entendendoJQuery.html
@@ -2,18 +2,21 @@
 <html>
 
 <head>
-    <meta charset='UTF-8'>
-    <title>Entendendo jQuery</title>
-    <link rel='stylesheet' href='css/estilo.css'>
-    <script src="js/jquery.js"></script>
+  <meta charset='UTF-8'>
+  <title>Entendendo jQuery</title>
+  <link rel='stylesheet' href='css/estilo.css'>
+  <script src="js/jquery.js"></script>
 </head>
 
 <body class="conteudo exercicio">
-    <h1>Entendendo jQuery</h1>
-    <div>1</div>
-    <div>2</div>
+  <h1>Entendendo jQuery</h1>
+  <div>1</div>
+  <div>2</div>
 
-    <script>
-        // ...
-    </script>
+  <script>
+    $('div').hide(5000).show(5000).fadeOut(5000);
+    console.log($('div').get(0));
+    console.log($.isEmptyObject({}));
+    console.log(jQuery.inArray(3, [1, 2, 3]));
+  </script>
 </body>
