--- a/jquery/selecionandoElementos1.html
+++ b/jquery/selecionandoElementos1.html
@@ -49,6 +49,13 @@
     </form>
 
     <script>
-        // ...
+        $('#feira').addClass('destaque').removeClass('destaque')
+
+        // exclusive jquery
+        $('li:first').css('border', 'solid 3px yellow');
+        $('li:odd').css('border', 'solid 10px orange');
+        $('li:gt(1)').css('border', 'solid 10px white');
+        $('li:not(:last)').css('border', 'none');
+        $('li:contains("r")').css('background-color', 'black');
     </script>
 </body>
