--- a/bootstrap/exercicios/paginas/bemVindo.html
+++ b/bootstrap/exercicios/paginas/bemVindo.html
@@ -1,1 +1,4 @@
-<!-- Título (jumbotron) -->
+<div class="jumbotron p-4 my-1">
+  <h1 class="display-4">Home</h1>
+  <p class="lead m-1">Página de Home.</p>
+</div>
