--- a/bootstrap/exercicios/paginas/formulario.html
+++ b/bootstrap/exercicios/paginas/formulario.html
@@ -1,8 +1,91 @@
-<!-- Título (jumbotron) -->
-<!-- Breadcrumb -->
+<div class="jumbotron p-4 my-1">
+  <h1 class="display-4">Formulário</h1>
+  <p class="lead m-1">Exemplo de alguns componentes de formulário do Bootstrap.</p>
+</div>
+
+<nav class="mb-5" aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <a href="#/paginas/bemVindo.html">Home</a>
+    </li>
+    <li class="breadcrumb-item active">Formulário</li>
+  </ol>
+</nav>
 
 <p class="lead">
-    <a href="https://getbootstrap.com/docs/4.0/components/forms/" target="_black">Documentação Oficial</a>
+  <a href="https://getbootstrap.com/docs/4.0/components/forms/" target="_black">Documentação Oficial</a>
 </p>
 
 <!-- Formulário -->
+<div class="card">
+  <div class="card-header">
+    <h5 class="mb-0">
+      Exemplo de Fiormulário
+    </h5>
+  </div>
+  <div class="card-body">
+    <form action="" class="container-fluid">
+      <div class="form-row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="nome">Nome</label>
+            <input type="text" class="form-control" id="nome" placeholder="Informe o nome">
+          </div>
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="col-12 col-md-6">
+          <div class="form-group">
+            <label for="email">E-mail</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">@</span>
+              </div>
+              <input type="text" class="form-control" id="email" placeholder="Informe o e-mail">
+            </div>
+            <small class="form-text text-muted">
+              Texto abaixo
+            </small>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <div class="form-group">
+            <label for="linguagemPreferida">Linguagem</label>
+            <select id="linguagemPreferida" class="form-control">
+              <option value="">Selecione...</option>
+              <option>JS</option>
+              <option>Java</option>
+              <option>Phyton</option>
+              <option>Ruby</option>
+              <option>Outra</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="col-12">
+          <div class="form-check">
+            <input id="defaultCheckbox" type="checkbox" class="form-check-input">
+            <label for="defaultCheckbox" class="input-check-label">Default checkbox</label>
+          </div>
+          <div class="form-check">
+            <input id="disabledCheckbox" type="checkbox" class="form-check-input" disabled>
+            <label for="disabledCheckbox" class="input-check-label">Disabled checkbox</label>
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="form-row mb-0">
+        <div class="col-12 d-flex justify-content-end">
+          <button class="btn btn-primary mr-2" type="submit">Salvar</button>
+          <button class="btn btn-secondary" type="reset">Cancelar</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
