--- a/bootstrap/projeto-galeria/src/index.html
+++ b/bootstrap/projeto-galeria/src/index.html
@@ -2,16 +2,17 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Galeria de Fotos</title>
-    <link rel="stylesheet" href="estilo.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Galeria de Fotos</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <header wm-include="/pages/template/header.html"></header>
 
-    <script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
