--- a/vue/exercicios/ifFor.html
+++ b/vue/exercicios/ifFor.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>If & For</title>
-    <link rel="stylesheet" href="/css/estilo.css">
-    <script src="/js/vue.min.js"></script>
-</head>
-<body class="exercicio">
 
-    <script>
-        // ...
-    </script>
+<head>
+  <meta charset="UTF-8">
+  <title>If & For</title>
+  <link rel="stylesheet" href="/css/estilo.css">
+  <script src="/js/vue.min.js"></script>
+</head>
+
+<body class="exercicio">
+  <div id="app">
+    <p v-for="(aluno, i) in alunos">
+      {{i+1}}) {{aluno.nome}} - {{aluno.nota}} -
+      <span v-if="aluno.nota >= 9">Quadro de honra</span>
+      <span v-else-if="aluno.nota >= 7">Aprovado</span>
+      <span v-else-if="aluno.nota >= 3">Recuperação</span>
+      <span v-else=>Reprovado</span>
+    </p>
+    <hr />
+    <ul style="list-style: none;">
+      <li v-for="n in 5">
+        <span v-show="n % 2 != 0">{{n}}</span>
+      </li>
+    </ul>
+  </div>
+  <script>
+    new Vue({
+      el: '#app',
+      data: {
+        alunos: [
+          { nome: 'Ana', nota: 7.9 },
+          { nome: 'Cleber', nota: 6.5 },
+          { nome: 'Tomas', nota: 8.5 },
+          { nome: 'Seila', nota: 9.8 },
+          { nome: 'Seila', nota: 2.5 },
+        ]
+      }
+    })
+  </script>
 </body>
+
 </html>
