--- a/vue/exercicios/template.html
+++ b/vue/exercicios/template.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Template</title>
-    <link rel="stylesheet" href="/css/estilo.css">
-    <script src="/js/vue.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Template</title>
+  <link rel="stylesheet" href="/css/estilo.css">
+  <script src="/js/vue.min.js"></script>
 </head>
+
 <body class="exercicio">
-    
-    <script>
-        // ...
-    </script>
+  <div id="app"></div>
+  <script>
+    new Vue({
+      el: '#app',
+      data: {
+        title: "VueJS",
+        subtitle: 'Framework Progressivo'
+      },
+      template: `
+        <div>
+          <h1>{{title}}</h1>  
+          <h1>{{subtitle}}</h1>  
+        </div>
+      `
+    })
+  </script>
 </body>
+
 </html>
